@@ -4,7 +4,7 @@ SUBDIRS = . BuzzMachineLoader
 
 lib_LTLIBRARIES = libbml.la
 
-INCLUDES = \
+AM_CFLAGS = \
 	-I$(top_srcdir)/dllwrapper1/wine \
 	-I$(top_srcdir)/src/BuzzMachineLoader \
 	-I$(top_srcdir)/src
@@ -20,18 +20,18 @@ if USE_DLLWRAPPER2
 WRAPPER_LIBS = $(top_builddir)/dllwrapper2/libloader.la
 endif
 
-libbml_la_CFLAGS = $(BML_CFLAGS) $(ARCH_CFLAGS)
+libbml_la_CFLAGS = $(AM_CFLAGS) $(BML_CFLAGS) $(ARCH_CFLAGS)
 libbml_la_LIBADD = -lm -lpthread -ldl $(BML_LIBS) $(WRAPPER_LIBS)
 
 noinst_PROGRAMS=bmltest_info bmltest_process
 
 bmltest_info_SOURCES= bmltest_info.c
+bmltest_info_CFLAGS = $(AM_CFLAGS) $(BML_CFLAGS) $(ARCH_CFLAGS)
 bmltest_info_LDADD = $(BML_LIBS) -ldl libbml.la
-bmltest_info_CFLAGS = $(BML_CFLAGS) $(ARCH_CFLAGS)
 
 bmltest_process_SOURCES= bmltest_process.c
+bmltest_process_CFLAGS = $(AM_CFLAGS) $(BML_CFLAGS) $(ARCH_CFLAGS)
 bmltest_process_LDADD = $(BML_LIBS) -ldl libbml.la
-bmltest_process_CFLAGS = $(BML_CFLAGS) $(ARCH_CFLAGS)
 
 dlldir = $(libdir)
 dll_DATA = BuzzMachineLoader.dll
